Various fixes based on findbugs result